<resources>
    <string name="app_name">Bot - Socio Torcedor Vasco</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="text_email">Email</string>
    <string name="text_senha">Senha</string>


    <!-- Tela de Login -->
    <string name="botao_login">Login</string>
    <string name="text_cadastrar_conta">Crie uma conta</string>
    <string name="text_redefinir_senha">Esqueceu sua senha?</string>
    <string name="versao_app">Ver Beta</string>

    <!-- Tela de PasswordReset -->
    <string name="botao_reset_senha">Defefiir Senha</string>

    <!-- Tela de Cadastro -->
    <string name="text_nome">Nome</string>
    <string name="text_cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>